src/main/java/edu/uiowa/jopenmm/OpenMMAmoebaLibrary.java

  /**
   * Original signature : <code>
   * int OpenMM_AmoebaVdwForce_getSoftcorePower(const OpenMM_AmoebaVdwForce*)</code>
   */
  public static native int OpenMM_AmoebaVdwForce_getSoftcorePower(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setSoftcoreAlpha(OpenMM_AmoebaVdwForce*, double)</code>
   */
  public static native void OpenMM_AmoebaVdwForce_setSoftcoreAlpha(
      PointerByReference target, double alpha);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaVdwForce_getSoftcoreAlpha(const OpenMM_AmoebaVdwForce*)</code>
   */
  public static native double OpenMM_AmoebaVdwForce_getSoftcoreAlpha(PointerByReference target);
  /**
   * Original signature : <code>
   * OpenMM_AmoebaVdwForce_AlchemicalMethod OpenMM_AmoebaVdwForce_getAlchemicalMethod(const OpenMM_AmoebaVdwForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaVdwForce_getAlchemicalMethod(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_setAlchemicalMethod(OpenMM_AmoebaVdwForce*, OpenMM_AmoebaVdwForce_AlchemicalMethod)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_setAlchemicalMethod(
      PointerByReference target, int method);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaVdwForce_updateParametersInContext(OpenMM_AmoebaVdwForce*, OpenMM_Context*)
   * </code>
   */
  public static native void OpenMM_AmoebaVdwForce_updateParametersInContext(
      PointerByReference target, PointerByReference context);
  /**
   * Original signature : <code>
   * OpenMM_Boolean OpenMM_AmoebaVdwForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaVdwForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaVdwForce_usesPeriodicBoundaryConditions(
      PointerByReference target);
  /**
   * AmoebaWcaDispersionForce<br>
   * Original signature : <code>
   * OpenMM_AmoebaWcaDispersionForce* OpenMM_AmoebaWcaDispersionForce_create()</code>
   */
  public static native PointerByReference OpenMM_AmoebaWcaDispersionForce_create();
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_destroy(OpenMM_AmoebaWcaDispersionForce*)</code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_destroy(PointerByReference target);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaWcaDispersionForce_getNumParticles(const OpenMM_AmoebaWcaDispersionForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaWcaDispersionForce_getNumParticles(
      PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_setParticleParameters(OpenMM_AmoebaWcaDispersionForce*, int, double, double)
   * </code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_setParticleParameters(
      PointerByReference target, int particleIndex, double radius, double epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_getParticleParameters(const OpenMM_AmoebaWcaDispersionForce*, int, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_getParticleParameters(
      PointerByReference target, int particleIndex, DoubleBuffer radius, DoubleBuffer epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_getParticleParameters(const OpenMM_AmoebaWcaDispersionForce*, int, double*, double*)
   * </code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_getParticleParameters(
      PointerByReference target,
      int particleIndex,
      DoubleByReference radius,
      DoubleByReference epsilon);
  /**
   * Original signature : <code>
   * int OpenMM_AmoebaWcaDispersionForce_addParticle(OpenMM_AmoebaWcaDispersionForce*, double, double)
   * </code>
   */
  public static native int OpenMM_AmoebaWcaDispersionForce_addParticle(
      PointerByReference target, double radius, double epsilon);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_updateParametersInContext(OpenMM_AmoebaWcaDispersionForce*, OpenMM_Context*)
   * </code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_updateParametersInContext(
      PointerByReference target, PointerByReference context);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaWcaDispersionForce_getEpso(const OpenMM_AmoebaWcaDispersionForce*)</code>
   */
  public static native double OpenMM_AmoebaWcaDispersionForce_getEpso(PointerByReference target);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaWcaDispersionForce_getEpsh(const OpenMM_AmoebaWcaDispersionForce*)</code>
   */
  public static native double OpenMM_AmoebaWcaDispersionForce_getEpsh(PointerByReference target);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaWcaDispersionForce_getRmino(const OpenMM_AmoebaWcaDispersionForce*)</code>
   */
  public static native double OpenMM_AmoebaWcaDispersionForce_getRmino(PointerByReference target);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaWcaDispersionForce_getRminh(const OpenMM_AmoebaWcaDispersionForce*)</code>
   */
  public static native double OpenMM_AmoebaWcaDispersionForce_getRminh(PointerByReference target);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaWcaDispersionForce_getAwater(const OpenMM_AmoebaWcaDispersionForce*)</code>
   */
  public static native double OpenMM_AmoebaWcaDispersionForce_getAwater(PointerByReference target);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaWcaDispersionForce_getShctd(const OpenMM_AmoebaWcaDispersionForce*)</code>
   */
  public static native double OpenMM_AmoebaWcaDispersionForce_getShctd(PointerByReference target);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaWcaDispersionForce_getDispoff(const OpenMM_AmoebaWcaDispersionForce*)
   * </code>
   */
  public static native double OpenMM_AmoebaWcaDispersionForce_getDispoff(PointerByReference target);
  /**
   * Original signature : <code>
   * double OpenMM_AmoebaWcaDispersionForce_getSlevy(const OpenMM_AmoebaWcaDispersionForce*)</code>
   */
  public static native double OpenMM_AmoebaWcaDispersionForce_getSlevy(PointerByReference target);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_setEpso(OpenMM_AmoebaWcaDispersionForce*, double)</code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_setEpso(
      PointerByReference target, double inputValue);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_setEpsh(OpenMM_AmoebaWcaDispersionForce*, double)</code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_setEpsh(
      PointerByReference target, double inputValue);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_setRmino(OpenMM_AmoebaWcaDispersionForce*, double)</code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_setRmino(
      PointerByReference target, double inputValue);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_setRminh(OpenMM_AmoebaWcaDispersionForce*, double)</code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_setRminh(
      PointerByReference target, double inputValue);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_setAwater(OpenMM_AmoebaWcaDispersionForce*, double)</code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_setAwater(
      PointerByReference target, double inputValue);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_setShctd(OpenMM_AmoebaWcaDispersionForce*, double)</code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_setShctd(
      PointerByReference target, double inputValue);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_setDispoff(OpenMM_AmoebaWcaDispersionForce*, double)
   * </code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_setDispoff(
      PointerByReference target, double inputValue);
  /**
   * Original signature : <code>
   * void OpenMM_AmoebaWcaDispersionForce_setSlevy(OpenMM_AmoebaWcaDispersionForce*, double)</code>
   */
  public static native void OpenMM_AmoebaWcaDispersionForce_setSlevy(
      PointerByReference target, double inputValue);
  /**
   * Original signature : <code>
   * OpenMM_Boolean OpenMM_AmoebaWcaDispersionForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaWcaDispersionForce*)
   * </code>
   */
  public static native int OpenMM_AmoebaWcaDispersionForce_usesPeriodicBoundaryConditions(
      PointerByReference target);

  public static class OpenMM_3D_DoubleArray extends PointerType {
    public OpenMM_3D_DoubleArray(Pointer address) {
      super(address);
    }

    public OpenMM_3D_DoubleArray() {
      super();
    }
  };

  public static class OpenMM_2D_IntArray extends PointerType {
    public OpenMM_2D_IntArray(Pointer address) {
      super(address);
    }

    public OpenMM_2D_IntArray() {
      super();
    }
  };

  public static class OpenMM_HippoNonbondedForce extends PointerType {
    public OpenMM_HippoNonbondedForce(Pointer address) {
      super(address);
    }

    public OpenMM_HippoNonbondedForce() {
      super();
    }
  };

  public static class OpenMM_AmoebaGKCavitationForce extends PointerType {
    public OpenMM_AmoebaGKCavitationForce(Pointer address) {
      super(address);
    }

    public OpenMM_AmoebaGKCavitationForce() {
      super();
    }
  };

  public static class OpenMM_Context extends PointerType {
    public OpenMM_Context(Pointer address) {
      super(address);
    }

    public OpenMM_Context() {
      super();
    }
  };

  public static class OpenMM_AmoebaMultipoleForce extends PointerType {
    public OpenMM_AmoebaMultipoleForce(Pointer address) {
      super(address);
    }

    public OpenMM_AmoebaMultipoleForce() {
      super();
    }
  };

  public static class OpenMM_Vec3Array extends PointerType {
    public OpenMM_Vec3Array(Pointer address) {
      super(address);
    }

    public OpenMM_Vec3Array() {
      super();
    }
  };

  public static class OpenMM_AmoebaWcaDispersionForce extends PointerType {
    public OpenMM_AmoebaWcaDispersionForce(Pointer address) {
      super(address);
    }

    public OpenMM_AmoebaWcaDispersionForce() {
      super();
    }
  };

  public static class OpenMM_IntArray extends PointerType {
    public OpenMM_IntArray(Pointer address) {
      super(address);
    }

    public OpenMM_IntArray() {
      super();
    }
  };

  public static class OpenMM_DoubleArray extends PointerType {
    public OpenMM_DoubleArray(Pointer address) {
      super(address);
    }

    public OpenMM_DoubleArray() {
      super();
    }
  };

  public static class OpenMM_AmoebaGeneralizedKirkwoodForce extends PointerType {
    public OpenMM_AmoebaGeneralizedKirkwoodForce(Pointer address) {
      super(address);
    }

    public OpenMM_AmoebaGeneralizedKirkwoodForce() {
      super();
    }
  };

  public static class OpenMM_AmoebaTorsionTorsionForce extends PointerType {
    public OpenMM_AmoebaTorsionTorsionForce(Pointer address) {
      super(address);
    }

    public OpenMM_AmoebaTorsionTorsionForce() {
      super();
    }
  };

  public static class OpenMM_AmoebaVdwForce extends PointerType {
    public OpenMM_AmoebaVdwForce(Pointer address) {
      super(address);
    }

    public OpenMM_AmoebaVdwForce() {
      super();
    }
  };
}
